<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="#424242"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="362dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:background="#C1ECEC"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#424242"
        android:padding="6dp"
        android:textColorHint="#908F8C" />

    <EditText
        android:id="@+id/password"
        android:layout_width="362dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:background="#C1ECEC"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#424242"
        android:padding="6dp"
        android:textColorHint="#908F8C" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:background="#FCEADE"
        android:textColor="#424242"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_register"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/register"
        android:textColor="#424242"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

</LinearLayout>
