<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="horizontal">

    <ToggleButton
        android:id="@+id/encryptToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.75"
        android:textOff="Normal"
        android:textOn="Encrypt" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColorHint="#908F8C"
        android:textColor="#424242"
        android:hint="@string/write_a_message"
        android:id="@+id/messageArea"
        android:maxHeight="80dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:padding="4dp"
        android:src="@android:drawable/ic_menu_send"
        android:id="@+id/sendButton"/>
</LinearLayout>
